kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mysql-pvc
      containers:
        - name: backend-cont
          image: andrejbajalski/internships-backend:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /app/data
