kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: 
    ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
