kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: 
    ClusterIP
  selector:
    app: frontend
  ports:
    - name: http 
      port: 80
      targetPort: 80
