kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/backend"
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - pathType: Prefix
        path: "/static"
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port:
              number: 80
